--- a/src/JapaneseColorApp.css
+++ b/src/JapaneseColorApp.css
@@ -1,8 +1,19 @@
+
+body {
+  background-color: #faed8f;
+  background-image: url('https://www.transparenttextures.com/patterns/textured-paper.png');
+  background-repeat: repeat; /* Tile the texture */
+  background-size: auto; /* Keep the original size */
+  background-attachment: fixed; /* Fixed background */
+  color: #333; /* Text color for contrast */
+}
+
 .app-container {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
     font-family: Arial, sans-serif;
+    
   }
   h1 {
     font-size: 2em;
@@ -24,7 +35,7 @@
     font-weight: bold;
   }
   .card {
-    border: 1px solid #ddd;
+    border: 1px solid rgb(115, 15, 31, .2);
     border-radius: 4px;
     padding: 20px;
     margin-bottom: 20px;
@@ -43,7 +54,7 @@
   
   button {
     padding: 10px 20px;
-    background-color: #007bff;
+    background-color: #730F1F;
     color: white;
     border: none;
     border-radius: 4px;
@@ -116,10 +127,10 @@
   }
   
   .error {
-    color: #721c24;
+    color: #730F1F;
   }
   input{
-    border: 1px solid #007bff;
+    border: 1px solid #730F1F;
     border-radius: 4px;
   }
   .color-chip {
