--- a/src/components/ImageColorExtractor.css
+++ b/src/components/ImageColorExtractor.css
@@ -12,13 +12,44 @@
 }
 
 .upload-section {
-  display: flex;
   gap: 15px;
   margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+}
+.video-container {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  width: 100%;
 }
 
+.button-row {
+  display: flex;
+  justify-content: left;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.video-preview {
+  width: 100%;
+  max-width: 500px;
+  margin-bottom: 10px;
+}
+
+.upload-btn, .camera-btn, .capture-btn {
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.hidden {
+  display: none;
+}
 .upload-btn,
-.camera-btn {
+.camera-btn,
+.capture-btn {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -35,13 +66,29 @@
 }
 
 .upload-btn:hover,
-.camera-btn:hover {
-  background-color: var(--hover-color);
+.camera-btn:hover,
+.capture-btn:hover {
+  background-color: #b83e2e;
 }
 
+
 .upload-btn:active,
-.camera-btn:active {
+.camera-btn:active,
+.capture-btn:active {
   transform: scale(0.98);
+}
+
+.hidden {
+  display: none;
+}
+
+.video-preview {
+  width: 100%;
+  max-width: 400px;
+  margin: 10px auto;
+  display: block;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .image-preview {
@@ -128,8 +175,4 @@
   flex: 1 0 20%;
   min-width: 20%;
   height: 50%;
-}
-
-.hidden {
-  display: none;
 }
